added extract and filter to storage get and list, added storage hash for integrity
