# x/storage/types/query.pb.go
@@ -33,8 +33,12 @@ var _ = math.Inf
 const _ = proto.GoGoProtoPackageIsVersion3 // please upgrade the proto package
 
 type QueryStorageGetRequest struct {
+	// The address of the owner of the storage entry.
 	Owner string `protobuf:"bytes,1,opt,name=owner,proto3" json:"owner,omitempty"`
+	// The index of the storage entry.
 	Index string `protobuf:"bytes,2,opt,name=index,proto3" json:"index,omitempty"`
+	// The gjson path to extract from the storage entry.
+	Extract string `protobuf:"bytes,3,opt,name=extract,proto3" json:"extract,omitempty"`
 }
 
 func (m *QueryStorageGetRequest) Reset()         { *m = QueryStorageGetRequest{} }
@@ -84,6 +88,13 @@ func (m *QueryStorageGetRequest) GetIndex() string {
 	return ""
 }
 
+func (m *QueryStorageGetRequest) GetExtract() string {
+	if m != nil {
+		return m.Extract
+	}
+	return ""
+}
+
 type QueryStorageGetResponse struct {
 	Entry *Storage `protobuf:"bytes,1,opt,name=entry,proto3" json:"entry,omitempty"`
 }
@@ -129,9 +140,20 @@ func (m *QueryStorageGetResponse) GetEntry() *Storage {
 }
 
 type QueryStorageListRequest struct {
-	Owner       string             `protobuf:"bytes,1,opt,name=owner,proto3" json:"owner,omitempty"`
-	IndexPrefix string             `protobuf:"bytes,2,opt,name=index_prefix,json=indexPrefix,proto3" json:"index_prefix,omitempty"`
-	Pagination  *query.PageRequest `protobuf:"bytes,4,opt,name=pagination,proto3" json:"pagination,omitempty"`
+	// The address of the owner of the storage entry.
+	Owner string `protobuf:"bytes,1,opt,name=owner,proto3" json:"owner,omitempty"`
+	// The index prefix of the storage entry to filter by.
+	IndexPrefix string `protobuf:"bytes,2,opt,name=index_prefix,json=indexPrefix,proto3" json:"index_prefix,omitempty"`
+	// The optional gjson filter to filter the storage entry. For example, Given
+	// data like {"user": {"age": 18}}, the filter "user.age > 18" will return
+	// true.
+	Filter string `protobuf:"bytes,3,opt,name=filter,proto3" json:"filter,omitempty"`
+	// The optional gjson path to extract from the storage entry. For example,
+	// Given data like {"user": {"name": "jeff"}}, the extract "user.name" will
+	// return "jeff".
+	Extract string `protobuf:"bytes,4,opt,name=extract,proto3" json:"extract,omitempty"`
+	// The pagination request.
+	Pagination *query.PageRequest `protobuf:"bytes,5,opt,name=pagination,proto3" json:"pagination,omitempty"`
 }
 
 func (m *QueryStorageListRequest) Reset()         { *m = QueryStorageListRequest{} }
@@ -177,6 +199,20 @@ func (m *QueryStorageListRequest) GetOwner() string {
 func (m *QueryStorageListRequest) GetIndexPrefix() string {
 	if m != nil {
 		return m.IndexPrefix
+	}
+	return ""
+}
+
+func (m *QueryStorageListRequest) GetFilter() string {
+	if m != nil {
+		return m.Filter
+	}
+	return ""
+}
+
+func (m *QueryStorageListRequest) GetExtract() string {
+	if m != nil {
+		return m.Extract
 	}
 	return ""
 }
@@ -252,38 +288,40 @@ func init() {
 }
 
 var fileDescriptor_ad09eeace4391645 = []byte{
-	// 492 bytes of a gzipped FileDescriptorProto
-	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0x9c, 0x92, 0xb1, 0x6e, 0x13, 0x41,
-	0x10, 0x86, 0xbd, 0x06, 0x83, 0x58, 0xd3, 0xb0, 0xb2, 0xe0, 0xb0, 0xd0, 0x29, 0x3e, 0x81, 0x13,
-	0x21, 0x65, 0x97, 0x33, 0x05, 0x45, 0x2a, 0x52, 0x90, 0x86, 0x22, 0x5c, 0x3a, 0x0a, 0xac, 0xb3,
-	0x3d, 0x9c, 0x56, 0xb2, 0x77, 0x2e, 0xb7, 0x1b, 0x13, 0xb7, 0x3c, 0x01, 0x12, 0x2f, 0x90, 0x82,
-	0x47, 0xc8, 0x43, 0x50, 0x06, 0x68, 0x28, 0x91, 0xcd, 0x83, 0xa0, 0xdb, 0x5d, 0x13, 0x5b, 0xc1,
-	0x72, 0x4c, 0x63, 0xf9, 0x66, 0xfe, 0x99, 0xff, 0xdb, 0x99, 0xa1, 0x8f, 0x07, 0x13, 0x8d, 0x2a,
-	0x2f, 0xd0, 0x60, 0x1f, 0x87, 0x42, 0x1b, 0x2c, 0xd2, 0x0c, 0xc4, 0x38, 0x16, 0xc7, 0x27, 0x50,
-	0x4c, 0xb8, 0xcd, 0xb0, 0x60, 0x49, 0xc5, 0xbd, 0x8a, 0x8f, 0xe3, 0x66, 0x23, 0xc3, 0x0c, 0x6d,
-	0x42, 0x94, 0xff, 0x9c, 0xbe, 0xf9, 0x28, 0x43, 0xcc, 0x86, 0x20, 0xd2, 0x5c, 0x8a, 0x54, 0x29,
-	0x34, 0xa9, 0x91, 0xa8, 0xb4, 0xcf, 0x3e, 0xed, 0xa3, 0x1e, 0xa1, 0x16, 0xbd, 0x54, 0x83, 0xb3,
-	0x11, 0xe3, 0xb8, 0x07, 0x26, 0x8d, 0x45, 0x9e, 0x66, 0x52, 0x59, 0xb1, 0xd7, 0x3e, 0x74, 0xda,
-	0xae, 0xb3, 0x70, 0x1f, 0x3e, 0x75, 0x2f, 0x1d, 0x49, 0x85, 0xc2, 0xfe, 0xfa, 0x50, 0x7b, 0xe5,
-	0x6b, 0xe6, 0xc8, 0x36, 0x17, 0xbd, 0xa3, 0xf7, 0xdf, 0x94, 0xbe, 0x47, 0x2e, 0x7a, 0x00, 0x26,
-	0x81, 0xe3, 0x13, 0xd0, 0x86, 0x71, 0x5a, 0xc3, 0x0f, 0x0a, 0x8a, 0x80, 0x6c, 0x91, 0x9d, 0x3b,
-	0xfb, 0xc1, 0xf7, 0xf3, 0xdd, 0x86, 0x77, 0x7d, 0x39, 0x18, 0x14, 0xa0, 0xf5, 0x91, 0x29, 0xa4,
-	0xca, 0x12, 0x27, 0x63, 0x0d, 0x5a, 0x93, 0x6a, 0x00, 0xa7, 0x41, 0xb5, 0xd4, 0x27, 0xee, 0x23,
-	0x4a, 0xe8, 0x83, 0x2b, 0xfd, 0x75, 0x8e, 0x4a, 0x03, 0x7b, 0x41, 0x6b, 0xa0, 0x4c, 0x31, 0xb1,
-	0x06, 0xf5, 0x4e, 0x8b, 0xaf, 0x1a, 0x2d, 0xf7, 0xc5, 0x89, 0xd3, 0x47, 0xe7, 0x64, 0xb9, 0xe9,
-	0x6b, 0xa9, 0xff, 0x9b, 0xba, 0x45, 0xef, 0x5a, 0xd0, 0x6e, 0x5e, 0xc0, 0x7b, 0x39, 0x87, 0xaf,
-	0xdb, 0xd8, 0xa1, 0x0d, 0xb1, 0x57, 0x94, 0x5e, 0x2e, 0x23, 0xb8, 0x69, 0x61, 0xdb, 0xdc, 0x37,
-	0x2d, 0x37, 0xc7, 0xdd, 0x81, 0xf8, 0xcd, 0xf1, 0xc3, 0x12, 0xd5, 0xe1, 0x24, 0x0b, 0x95, 0xd1,
-	0x19, 0xa1, 0xc1, 0x55, 0x6c, 0x3f, 0x8c, 0x3d, 0x7a, 0xbb, 0x7c, 0x9c, 0x04, 0x1d, 0x90, 0xad,
-	0x1b, 0xd7, 0x1b, 0xc7, 0xbc, 0x82, 0x1d, 0x2c, 0x11, 0x56, 0x2d, 0xe1, 0xf6, 0x5a, 0x42, 0xe7,
-	0xbc, 0x88, 0xd8, 0xf9, 0x56, 0xa5, 0x35, 0x8b, 0xc8, 0xce, 0x08, 0xa5, 0x97, 0x3b, 0x63, 0xcf,
-	0x56, 0xd3, 0xfc, 0xfb, 0x7c, 0x9a, 0xf1, 0x06, 0x15, 0x8e, 0x24, 0xda, 0xfd, 0xf8, 0xe3, 0xf7,
-	0xe7, 0xea, 0x36, 0x7b, 0x22, 0xd6, 0x1d, 0x6f, 0x37, 0x03, 0xc3, 0xbe, 0x10, 0x5a, 0x5f, 0x18,
-	0x25, 0xbb, 0xa6, 0xe3, 0xc2, 0xb5, 0x34, 0x3b, 0x9b, 0x94, 0x78, 0x4a, 0x6e, 0x29, 0x77, 0x58,
-	0x7b, 0x3d, 0xe5, 0x50, 0x6a, 0xb3, 0xbf, 0xf7, 0x75, 0x1a, 0x92, 0x8b, 0x69, 0x48, 0x7e, 0x4d,
-	0x43, 0xf2, 0x69, 0x16, 0x56, 0x2e, 0x66, 0x61, 0xe5, 0xe7, 0x2c, 0xac, 0xbc, 0x6d, 0x2d, 0x9b,
-	0xf7, 0x71, 0x24, 0x4e, 0xff, 0xb6, 0x31, 0x93, 0x1c, 0x74, 0xef, 0x96, 0xcd, 0x3e, 0xff, 0x13,
-	0x00, 0x00, 0xff, 0xff, 0x20, 0x99, 0x7d, 0x71, 0x9d, 0x04, 0x00, 0x00,
+	// 523 bytes of a gzipped FileDescriptorProto
+	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0x9c, 0x53, 0xc1, 0x6e, 0x13, 0x31,
+	0x10, 0x8d, 0x53, 0xd2, 0x0a, 0x87, 0x0b, 0x56, 0x54, 0x96, 0x08, 0xad, 0x9a, 0x08, 0xd2, 0x0a,
+	0xa9, 0x36, 0x1b, 0x0e, 0x1c, 0x7a, 0xa2, 0x07, 0x7a, 0xe1, 0x50, 0xb6, 0x37, 0x2e, 0xd1, 0x26,
+	0x99, 0xae, 0x2c, 0x25, 0xf6, 0xd6, 0x76, 0x43, 0x72, 0xe5, 0x0b, 0x90, 0xf8, 0x81, 0x1e, 0xf8,
+	0x04, 0x3e, 0x82, 0x63, 0x81, 0x0b, 0x47, 0x94, 0x20, 0xbe, 0x03, 0xad, 0xed, 0xd0, 0x5d, 0x95,
+	0x28, 0x2d, 0x97, 0xd5, 0xce, 0xcc, 0x1b, 0xbf, 0xf7, 0xc6, 0x63, 0xfc, 0x78, 0x38, 0xd3, 0x52,
+	0x64, 0x4a, 0x1a, 0x39, 0x90, 0x23, 0xa6, 0x8d, 0x54, 0x49, 0x0a, 0x6c, 0x12, 0xb1, 0xb3, 0x73,
+	0x50, 0x33, 0x6a, 0x2b, 0x24, 0x28, 0xa1, 0xa8, 0x47, 0xd1, 0x49, 0xd4, 0x6c, 0xa4, 0x32, 0x95,
+	0xb6, 0xc0, 0xf2, 0x3f, 0x87, 0x6f, 0x3e, 0x4a, 0xa5, 0x4c, 0x47, 0xc0, 0x92, 0x8c, 0xb3, 0x44,
+	0x08, 0x69, 0x12, 0xc3, 0xa5, 0xd0, 0xbe, 0xfa, 0x74, 0x20, 0xf5, 0x58, 0x6a, 0xd6, 0x4f, 0x34,
+	0x38, 0x1a, 0x36, 0x89, 0xfa, 0x60, 0x92, 0x88, 0x65, 0x49, 0xca, 0x85, 0x05, 0x7b, 0xec, 0x43,
+	0x87, 0xed, 0x39, 0x0a, 0x17, 0xf8, 0xd2, 0xfd, 0x64, 0xcc, 0x85, 0x64, 0xf6, 0xeb, 0x53, 0x9d,
+	0x95, 0x6e, 0x96, 0x92, 0x6d, 0xad, 0x3d, 0xc5, 0xdb, 0x6f, 0x72, 0xde, 0x13, 0x97, 0x3d, 0x02,
+	0x13, 0xc3, 0xd9, 0x39, 0x68, 0x43, 0x28, 0xae, 0xc9, 0x77, 0x02, 0x54, 0x80, 0x76, 0xd0, 0xde,
+	0xdd, 0xc3, 0xe0, 0xdb, 0xe7, 0xfd, 0x86, 0x67, 0x7d, 0x39, 0x1c, 0x2a, 0xd0, 0xfa, 0xc4, 0x28,
+	0x2e, 0xd2, 0xd8, 0xc1, 0x48, 0x03, 0xd7, 0xb8, 0x18, 0xc2, 0x34, 0xa8, 0xe6, 0xf8, 0xd8, 0x05,
+	0x24, 0xc0, 0x5b, 0x30, 0x35, 0x2a, 0x19, 0x98, 0x60, 0xc3, 0xe6, 0x97, 0x61, 0x3b, 0xc6, 0x0f,
+	0xae, 0x31, 0xeb, 0x4c, 0x0a, 0x0d, 0xe4, 0x05, 0xae, 0x81, 0x30, 0x6a, 0x66, 0xa9, 0xeb, 0xdd,
+	0x16, 0x5d, 0x35, 0x74, 0xea, 0x9b, 0x63, 0x87, 0x6f, 0xff, 0x46, 0xe5, 0x43, 0x5f, 0x73, 0xfd,
+	0xdf, 0x7e, 0x5a, 0xf8, 0x9e, 0xb5, 0xd0, 0xcb, 0x14, 0x9c, 0xf2, 0xa5, 0xad, 0xba, 0xcd, 0x1d,
+	0xdb, 0x14, 0xd9, 0xc6, 0x9b, 0xa7, 0x7c, 0x64, 0x40, 0x79, 0x6f, 0x3e, 0x2a, 0x9a, 0xbe, 0x53,
+	0x32, 0x4d, 0x5e, 0x61, 0x7c, 0x75, 0xb1, 0x41, 0xcd, 0xda, 0xeb, 0x50, 0x2f, 0x23, 0xdf, 0x02,
+	0xea, 0x96, 0xcd, 0x6f, 0x01, 0x3d, 0xce, 0xcd, 0x39, 0x03, 0x71, 0xa1, 0xb3, 0x7d, 0x81, 0x70,
+	0x70, 0xdd, 0xa8, 0x1f, 0xdf, 0x01, 0xde, 0xca, 0xc7, 0xc1, 0x41, 0x07, 0x68, 0x67, 0xe3, 0x66,
+	0x03, 0x5c, 0x76, 0x90, 0xa3, 0x92, 0xc2, 0xaa, 0x55, 0xb8, 0xbb, 0x56, 0xa1, 0x63, 0x2e, 0x4a,
+	0xec, 0x7e, 0xad, 0xe2, 0x9a, 0x95, 0x48, 0x2e, 0x10, 0xc6, 0x57, 0xb7, 0x4c, 0x9e, 0xad, 0x56,
+	0xf3, 0xef, 0x55, 0x6c, 0x46, 0xb7, 0xe8, 0x70, 0x4a, 0xda, 0xfb, 0xef, 0xbf, 0xff, 0xfa, 0x58,
+	0xdd, 0x25, 0x4f, 0xd8, 0xba, 0x87, 0xd0, 0x4b, 0xc1, 0x90, 0x4f, 0x08, 0xd7, 0x0b, 0xa3, 0x24,
+	0x37, 0x64, 0x2c, 0xec, 0x57, 0xb3, 0x7b, 0x9b, 0x16, 0xaf, 0x92, 0x5a, 0x95, 0x7b, 0xa4, 0xb3,
+	0x5e, 0xe5, 0x88, 0x6b, 0x73, 0x78, 0xf0, 0x65, 0x1e, 0xa2, 0xcb, 0x79, 0x88, 0x7e, 0xce, 0x43,
+	0xf4, 0x61, 0x11, 0x56, 0x2e, 0x17, 0x61, 0xe5, 0xc7, 0x22, 0xac, 0xbc, 0x6d, 0x95, 0xc9, 0x07,
+	0x72, 0xcc, 0xa6, 0x7f, 0x8f, 0x31, 0xb3, 0x0c, 0x74, 0x7f, 0xd3, 0x56, 0x9f, 0xff, 0x09, 0x00,
+	0x00, 0xff, 0xff, 0xee, 0x31, 0xe2, 0xa4, 0xe9, 0x04, 0x00, 0x00,
 }
 
 // Reference imports to suppress errors if they are not otherwise used.
@@ -300,9 +338,9 @@ const _ = grpc.SupportPackageIsVersion4
 type QueryClient interface {
 	// Gets the stored data for the given owner and index.
 	StorageGet(ctx context.Context, in *QueryStorageGetRequest, opts ...grpc.CallOption) (*QueryStorageGetResponse, error)
-	// Lists all storage entries for the owner under a given index prefix.
-	// If index_only=true, only keys are returned (values may be empty); supports
-	// pagination.
+	// Lists all storage entries for the owner under a given index prefix. Use
+	// filter and extract to filter and extract the data and iterate over the data
+	// efficiently.
 	StorageList(ctx context.Context, in *QueryStorageListRequest, opts ...grpc.CallOption) (*QueryStorageListResponse, error)
 }
 
@@ -336,9 +374,9 @@ func (c *queryClient) StorageList(ctx context.Context, in *QueryStorageListReque
 type QueryServer interface {
 	// Gets the stored data for the given owner and index.
 	StorageGet(context.Context, *QueryStorageGetRequest) (*QueryStorageGetResponse, error)
-	// Lists all storage entries for the owner under a given index prefix.
-	// If index_only=true, only keys are returned (values may be empty); supports
-	// pagination.
+	// Lists all storage entries for the owner under a given index prefix. Use
+	// filter and extract to filter and extract the data and iterate over the data
+	// efficiently.
 	StorageList(context.Context, *QueryStorageListRequest) (*QueryStorageListResponse, error)
 }
 
@@ -431,6 +469,13 @@ func (m *QueryStorageGetRequest) MarshalToSizedBuffer(dAtA []byte) (int, error) 
 	_ = i
 	var l int
 	_ = l
+	if len(m.Extract) > 0 {
+		i -= len(m.Extract)
+		copy(dAtA[i:], m.Extract)
+		i = encodeVarintQuery(dAtA, i, uint64(len(m.Extract)))
+		i--
+		dAtA[i] = 0x1a
+	}
 	if len(m.Index) > 0 {
 		i -= len(m.Index)
 		copy(dAtA[i:], m.Index)
@@ -513,7 +558,21 @@ func (m *QueryStorageListRequest) MarshalToSizedBuffer(dAtA []byte) (int, error)
 			i = encodeVarintQuery(dAtA, i, uint64(size))
 		}
 		i--
+		dAtA[i] = 0x2a
+	}
+	if len(m.Extract) > 0 {
+		i -= len(m.Extract)
+		copy(dAtA[i:], m.Extract)
+		i = encodeVarintQuery(dAtA, i, uint64(len(m.Extract)))
+		i--
 		dAtA[i] = 0x22
+	}
+	if len(m.Filter) > 0 {
+		i -= len(m.Filter)
+		copy(dAtA[i:], m.Filter)
+		i = encodeVarintQuery(dAtA, i, uint64(len(m.Filter)))
+		i--
+		dAtA[i] = 0x1a
 	}
 	if len(m.IndexPrefix) > 0 {
 		i -= len(m.IndexPrefix)
@@ -606,6 +665,10 @@ func (m *QueryStorageGetRequest) Size() (n int) {
 	if l > 0 {
 		n += 1 + l + sovQuery(uint64(l))
 	}
+	l = len(m.Extract)
+	if l > 0 {
+		n += 1 + l + sovQuery(uint64(l))
+	}
 	return n
 }
 
@@ -633,6 +696,14 @@ func (m *QueryStorageListRequest) Size() (n int) {
 		n += 1 + l + sovQuery(uint64(l))
 	}
 	l = len(m.IndexPrefix)
+	if l > 0 {
+		n += 1 + l + sovQuery(uint64(l))
+	}
+	l = len(m.Filter)
+	if l > 0 {
+		n += 1 + l + sovQuery(uint64(l))
+	}
+	l = len(m.Extract)
 	if l > 0 {
 		n += 1 + l + sovQuery(uint64(l))
 	}
@@ -760,6 +831,38 @@ func (m *QueryStorageGetRequest) Unmarshal(dAtA []byte) error {
 				return io.ErrUnexpectedEOF
 			}
 			m.Index = string(dAtA[iNdEx:postIndex])
+			iNdEx = postIndex
+		case 3:
+			if wireType != 2 {
+				return fmt.Errorf("proto: wrong wireType = %d for field Extract", wireType)
+			}
+			var stringLen uint64
+			for shift := uint(0); ; shift += 7 {
+				if shift >= 64 {
+					return ErrIntOverflowQuery
+				}
+				if iNdEx >= l {
+					return io.ErrUnexpectedEOF
+				}
+				b := dAtA[iNdEx]
+				iNdEx++
+				stringLen |= uint64(b&0x7F) << shift
+				if b < 0x80 {
+					break
+				}
+			}
+			intStringLen := int(stringLen)
+			if intStringLen < 0 {
+				return ErrInvalidLengthQuery
+			}
+			postIndex := iNdEx + intStringLen
+			if postIndex < 0 {
+				return ErrInvalidLengthQuery
+			}
+			if postIndex > l {
+				return io.ErrUnexpectedEOF
+			}
+			m.Extract = string(dAtA[iNdEx:postIndex])
 			iNdEx = postIndex
 		default:
 			iNdEx = preIndex
@@ -961,7 +1064,71 @@ func (m *QueryStorageListRequest) Unmarshal(dAtA []byte) error {
 			}
 			m.IndexPrefix = string(dAtA[iNdEx:postIndex])
 			iNdEx = postIndex
+		case 3:
+			if wireType != 2 {
+				return fmt.Errorf("proto: wrong wireType = %d for field Filter", wireType)
+			}
+			var stringLen uint64
+			for shift := uint(0); ; shift += 7 {
+				if shift >= 64 {
+					return ErrIntOverflowQuery
+				}
+				if iNdEx >= l {
+					return io.ErrUnexpectedEOF
+				}
+				b := dAtA[iNdEx]
+				iNdEx++
+				stringLen |= uint64(b&0x7F) << shift
+				if b < 0x80 {
+					break
+				}
+			}
+			intStringLen := int(stringLen)
+			if intStringLen < 0 {
+				return ErrInvalidLengthQuery
+			}
+			postIndex := iNdEx + intStringLen
+			if postIndex < 0 {
+				return ErrInvalidLengthQuery
+			}
+			if postIndex > l {
+				return io.ErrUnexpectedEOF
+			}
+			m.Filter = string(dAtA[iNdEx:postIndex])
+			iNdEx = postIndex
 		case 4:
+			if wireType != 2 {
+				return fmt.Errorf("proto: wrong wireType = %d for field Extract", wireType)
+			}
+			var stringLen uint64
+			for shift := uint(0); ; shift += 7 {
+				if shift >= 64 {
+					return ErrIntOverflowQuery
+				}
+				if iNdEx >= l {
+					return io.ErrUnexpectedEOF
+				}
+				b := dAtA[iNdEx]
+				iNdEx++
+				stringLen |= uint64(b&0x7F) << shift
+				if b < 0x80 {
+					break
+				}
+			}
+			intStringLen := int(stringLen)
+			if intStringLen < 0 {
+				return ErrInvalidLengthQuery
+			}
+			postIndex := iNdEx + intStringLen
+			if postIndex < 0 {
+				return ErrInvalidLengthQuery
+			}
+			if postIndex > l {
+				return io.ErrUnexpectedEOF
+			}
+			m.Extract = string(dAtA[iNdEx:postIndex])
+			iNdEx = postIndex
+		case 5:
 			if wireType != 2 {
 				return fmt.Errorf("proto: wrong wireType = %d for field Pagination", wireType)
 			}
